Opened 16 years ago
Closed 16 years ago
#1143 closed bug (fixed)
Missing symbol: _ReservedStatusBar1__10BStatusBar
Reported by: | aldeck | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Missing symbol _ReservedStatusBar1__10BStatusBar
Haiku:
nm libbe.so | grep ReservedStatusBar
00143704 T _ReservedStatusBar1__10BStatusBar__FP10BStatusBarfPCcT2 00143738 T _ReservedStatusBar2__10BStatusBar 00143740 T _ReservedStatusBar3__10BStatusBar 00143748 T _ReservedStatusBar4__10BStatusBar
R5:
nm /system/lib/libbe.so | grep ReservedStatusBar
001133a8 T _ReservedStatusBar1__10BStatusBar 001133a0 T _ReservedStatusBar2__10BStatusBar 00113398 T _ReservedStatusBar3__10BStatusBar 00113390 T _ReservedStatusBar4__10BStatusBar
StatusBar.h and cpp looks strange. see commit 17857 and maybe bug #419
http://svn.berlios.de/viewcvs/haiku/haiku/trunk/src/kits/interface/StatusBar.cpp?rev=17857&view=markup http://svn.berlios.de/viewcvs/haiku/haiku/trunk/headers/os/interface/StatusBar.h?rev=17857&view=markup
enjoy:)
Attachments (1)
Note:
See TracTickets
for help on using tickets.
void _ReservedStatusBar110BStatusBar(BS....) should probably be prefixed with "extern "C"".