* patch by aldeck, fixes ticket #1143

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20618 a95241bf-73f2-0310-859d-f6bbb57e9c96